Add interval packing (#3183)
Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>