@@ -1,50 +1,45 @@
 package com.bakdata.conquery.sql.conversion.cqelement.concept;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import com.bakdata.conquery.sql.conversion.model.ConceptSelects;
-import com.bakdata.conquery.sql.conversion.model.filter.FilterCondition;
 import com.bakdata.conquery.sql.conversion.model.QueryStep;
+import com.bakdata.conquery.sql.conversion.model.Selects;
+import com.bakdata.conquery.sql.conversion.model.filter.FilterCondition;
 import com.bakdata.conquery.sql.conversion.model.select.SqlSelect;
-import com.bakdata.conquery.sql.conversion.model.select.ExtractingSqlSelect;
 import org.jooq.Condition;
 
 class EventFilterCte extends ConceptCte {
 
 	@Override
-	public QueryStep.QueryStepBuilder convertStep(CteContext cteContext) {
+	public QueryStep.QueryStepBuilder convertStep(ConceptCteContext conceptCteContext) {
 
-		String preprocessingCteName = cteContext.getConceptTables().getPredecessorTableName(CteStep.EVENT_FILTER);
-
-		ConceptSelects eventFilterSelects = new ConceptSelects(
-				cteContext.getPrimaryColumn(),
-				cteContext.getValidityDateRange().map(validityDate -> validityDate.qualify(preprocessingCteName)),
-				// all selects we need to carry on for later steps have to be selected to be able to reference them from later steps
-				getSelectsForAggregationSelectStep(cteContext, preprocessingCteName)
+		Selects eventFilterSelects = Selects.qualified(
+				conceptCteContext.getConceptTables().getPredecessorTableName(ConceptCteStep.EVENT_FILTER),
+				conceptCteContext.getPrimaryColumn(),
+				conceptCteContext.getValidityDate(),
+				getForAggregationSelectStep(conceptCteContext)
 		);
 
-		List<Condition> eventFilterConditions = cteContext.getFilters().stream()
-														  .flatMap(conceptFilter -> conceptFilter.getFilters().getEvent().stream())
-														  .map(FilterCondition::filterCondition)
-														  .toList();
+		List<Condition> eventFilterConditions = conceptCteContext.getFilters().stream()
+																 .flatMap(conceptFilter -> conceptFilter.getFilters().getEvent().stream())
+																 .map(FilterCondition::filterCondition)
+																 .toList();
 
 		return QueryStep.builder()
 						.selects(eventFilterSelects)
 						.conditions(eventFilterConditions);
 	}
 
-	private static List<SqlSelect> getSelectsForAggregationSelectStep(CteContext cteContext, String preprocessingCteName) {
-		return cteContext.allConceptSelects()
-						 .flatMap(sqlSelects -> sqlSelects.getForAggregationSelectStep().stream())
-						 .map(conquerySelect -> ExtractingSqlSelect.fromConquerySelect(conquerySelect, preprocessingCteName))
-						 .distinct()
-						 .collect(Collectors.toList());
+	private static List<SqlSelect> getForAggregationSelectStep(ConceptCteContext conceptCteContext) {
+		return conceptCteContext.allConceptSelects()
+								.flatMap(sqlSelects -> sqlSelects.getForAggregationSelectStep().stream())
+								.distinct()
+								.toList();
 	}
 
 	@Override
-	public CteStep cteStep() {
-		return CteStep.EVENT_FILTER;
+	public ConceptCteStep cteStep() {
+		return ConceptCteStep.EVENT_FILTER;
 	}
 
 }
